<?xml version="1.0" encoding="utf-8"?>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="vertical"
				android:background="#FFFFFF"
				>

			<ImageView
			    android:id="@+id/titleImage"
			    android:layout_width="278dp"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:layout_marginBottom="16dp"
			    android:layout_marginLeft="8dp"
			    android:layout_marginRight="8dp"
			    android:layout_marginTop="16dp"
			    android:src="@drawable/title" />

			<Button
					android:id="@+id/vsComLevel1"
					android:layout_width="120dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text="@string/vsCom_Level1" />

			<Button
					android:id="@+id/vsComLevel2"
					android:layout_width="120dp"
					android:layout_height="wrap_content"
					android:text="@string/vsCom_Level2"
					android:layout_gravity="center_horizontal" />

			<Button
					android:id="@+id/vsComLevel3"
					android:layout_width="120dp"
					android:layout_height="wrap_content"
					android:text="@string/vsCom_Level3"
					android:layout_gravity="center_horizontal" />

			<Button
					android:id="@+id/vsHuman"
					android:layout_width="120dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_marginTop="10dp"
					android:text="@string/vsHuman" />

			<Button
					android:id="@+id/help"
					android:layout_width="160dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_marginTop="10dp"
					android:text="@string/help" />

		</LinearLayout>
