<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="#FFFFFF"
		android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true"
		>

			<ImageView
					android:id="@+id/levelImage"
					android:layout_width="wrap_content"
					android:layout_height="60dp"
					android:layout_gravity="left"
					android:layout_marginBottom="2dp"
					android:layout_marginLeft="6dp"
					android:layout_marginTop="2dp"
					android:contentDescription="@string/stage"
					android:src="@drawable/vs_human" />
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:layout_marginTop="2dp" >
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="4dp"
						android:text="@string/topTurn"
						android:textColor="#000000" />

				<EditText
					android:id="@+id/player1Name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPersonName"
					android:text="@string/player1Name"
					android:maxLength="16">

				</EditText>
			</LinearLayout>

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:layout_marginTop="2dp" >
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="4dp"
						android:text="@string/bottomTurn"
						android:textColor="#000000" />

				<EditText
					android:id="@+id/player2Name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPersonName"
					android:text="@string/player2Name"
					android:maxLength="16">

				</EditText>
			</LinearLayout>


		<ListView
				android:id="@+id/stageList"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1" >
				<requestFocus/>
		</ListView>

		<Button
				android:id="@+id/back"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginLeft="16dp"
				android:layout_marginRight="16dp"
				android:layout_marginTop="10dp"
				android:text="@string/back" />

</LinearLayout>